--- a/pages/Stats.html
+++ b/pages/Stats.html
@@ -77,7 +77,7 @@
           <table class="table">
             <thead>
               <tr>
-                <th class="table-active" colspan="6">Events Statistics</th>
+                <th class="table-active" colspan="3">Events Statistics</th>
               </tr>
             </thead>
             <tbody>
@@ -92,7 +92,7 @@
                 <td></td>
               </tr>
               <tr>
-                <th class="table-active" colspan="6">Upcoming events statistics by category</th>
+                <td class="table-active" colspan="3">Upcoming events statistics by category</td>
               </tr>
               <tr class="text-center">
                 <td>Categories</td>
@@ -109,7 +109,7 @@
                 <td></td>
                 <td></td>
               </tr>
-              <th class="table-active" colspan="6">Past events statistics by category</th>
+              <td class="table-active" colspan="3">Past events statistics by category</td>
               </tr>
               <tr class="text-center">
                 <td>Categories</td>
