--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -93,12 +93,10 @@
         <label for="message" class="col-form-label">Message:</label>
       </div>
       <div class="col-3">
-        <textarea class="form-control" rows="4"></textarea>
+        <textarea id="message" class="form-control" rows="4"></textarea>
       </div>
-          <button type="submit">Submit</button>
+      <button type="submit">Submit</button>
     </div>
-    
-
 
   </main>
   <footer class="d-flex container-fluid justify-content-between align-items-center">
