--- a/pages/UpcomingEvents.html
+++ b/pages/UpcomingEvents.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/resources/styles/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script type="module" src="../js/upcomingEvents.js" defer></script>
 </head>
 
 
@@ -110,7 +111,7 @@
           <button type="submit">Submit</button>
     </div>
 
-    <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center gap-2 m-2">
+    <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center gap-2 m-2" id="cardContainer">
      
       <div class="card h-300px">
         <img src="../resources/img/costume_party.jpg" class="card-img-top" alt="...">
