--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </button>
     </div>
 
-    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-3 m-3" >
+    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-3 m-3" id="checkboxContainer">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
@@ -192,6 +192,8 @@
         </div>
       </div>
     </div>
+
+    <div id="showMessageError"></div>
     
 
   </main>
