--- a/pages/Details.html
+++ b/pages/Details.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/resources/styles/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script type="module" src="../js/details.js" defer></script>
 </head>
 
 
@@ -34,7 +35,7 @@
           </div>
         </nav>
       </header>
-  <main class="d-flex justify-content-center m-5">
+  <main class="d-flex justify-content-center m-5" id="detailContainer">
 
     <div class="card mb-3">
         <div class="row g-0">
