--- a/pages/PastEvents.html
+++ b/pages/PastEvents.html
@@ -72,7 +72,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-3 m-3" >
+    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-3 m-3" id="checkboxContainer">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
@@ -157,6 +157,7 @@
         </div>
       </div>
     </div>
+    <div id="showMessageError"></div>
   </main>
   <footer class="d-flex container-fluid justify-content-between align-items-center">
     <div class="d-flex gap-1">
