--- a/pages/UpcomingEvents.html
+++ b/pages/UpcomingEvents.html
@@ -73,7 +73,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-3 m-3" >
+    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-3 m-3" id="checkboxContainer">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
@@ -110,7 +110,7 @@
           <input type="text" id="search" name="search">
           <button type="submit">Submit</button>
     </div>
-
+    <div id="showMessageError"></div>
     <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center gap-2 m-2" id="cardContainer">
      
       <div class="card h-300px">
