--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
   <link rel="shortcut icon" href="../resources/img/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="/resources/styles/styles.css">
+  <link rel="stylesheet" href="../resources/styles/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -35,7 +35,7 @@
     </nav>
   </header>
   <main>
-
+<div class="min-h-100">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <h1 class="position-absolute top-50 start-50 translate-middle z-1 fw-bold">CONTACT US</h1>
       <div class="carousel-inner">
@@ -72,7 +72,7 @@
       </button>
     </div>
 
-    <div class="d-flex flex-column g-3 align-items-center m-3">
+    <div class="d-flex flex-column g-3 align-items-center m-3 ">
       <div class="col-3">
         <label for="name" class="col-form-label">Name:</label>
       </div>
@@ -97,7 +97,7 @@
       </div>
       <button type="submit">Submit</button>
     </div>
-
+  </div>
   </main>
   <footer class="d-flex container-fluid justify-content-between align-items-center">
     <div class="d-flex gap-1">
