--- a/pages/Details.html
+++ b/pages/Details.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
   <link rel="shortcut icon" href="../resources/img/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="/resources/styles/styles.css">
+  <link rel="stylesheet" href="../resources/styles/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script type="module" src="../js/details.js" defer></script>
@@ -35,29 +35,7 @@
           </div>
         </nav>
       </header>
-  <main class="d-flex justify-content-center m-5" id="detailContainer">
-
-    <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="../resources/img/food_fair.jpg" class="img-fluid rounded-start h-100" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Festival of the collectivities</h5>
-              <p class="card-text">
-                <span class="fw-semibold">Date:</span> 2022-12-12<br>
-                <span class="fw-semibold">Description:</span> "Enjoy your favorite dishes from different countries in a unique event for the whole family." <br>
-                <span class="fw-semibold">Category:</span> Food Fair <br>
-                <span class="fw-semibold">Place:</span> Room A <br>
-                <span class="fw-semibold">Capacity:</span> 45000 <br>
-                <span class="fw-semibold">Assistance:</span> 42756 <br>
-                <span class="fw-semibold">Price:</span> 5
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+  <main class="d-flex justify-content-center m-5 min-h-100" id="detailContainer" >
 
 
   </main>
