--- a/pages/PastEvents.html
+++ b/pages/PastEvents.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PastEvents</title>
   <link rel="shortcut icon" href="../resources/img/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="/resources/styles/styles.css">
+  <link rel="stylesheet" href="../resources/styles/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script type="module" src="../js/pastEvents.js" defer></script>
@@ -35,7 +35,7 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class="min-h-100">
 
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <h1 class="position-absolute top-50 start-50 translate-middle z-1 fw-bold">PAST EVENTS</h1>
@@ -111,51 +111,7 @@
     </div>
 
     <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center gap-2 m-2" id="cardContainer">
-      <div class="card h-300px">
-        <img src="../resources/img/food_fair.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Festival of the collectivities</h5>
-          <p class="card-text">
-            <span class="fw-semibold">Description:</span> "Enjoy your favorite dishes from different countries in a unique event for the whole family." <br>
-            <span class="fw-semibold">Price:</span> 5
-          </p>
-          <a href="./Details.html" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-      <div class="card h-300px">
-        <img src="../resources/img/outing_to_the_museum.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Art Exhibition</h5>
-          <p class="card-text">
-            <span class="fw-semibold">Description:</span> "Let's go to the art museum for an incredible tour to learn about the largest dinosaurs." <br>
-            <span class="fw-semibold">Price:</span> 15
-          </p>
-          <a href="./Details.html" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-      
-      <div class="card h-300px">
-        <img src="../resources/img/marathon.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">10K for life</h5>
-          <p class="card-text">
-            <span class="fw-semibold">Description:</span> "Come and exercise, improve your health and lifestyle." <br>
-            <span class="fw-semibold">Price:</span> 3 <br> <br>
-          </p>
-          <a href="./Details.html" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-      <div class="card h-300px">
-        <img src="../resources/img/books.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">School Book Fair</h5>
-          <p class="card-text">
-            <span class="fw-semibold">Description:</span> "Bring your unused school book and bring the one you need." <br>
-            <span class="fw-semibold">Price:</span> 1
-          </p>
-          <a href="./Details.html" class="btn btn-primary">Details</a>
-        </div>
-      </div>
+
     </div>
     <div id="showMessageError"></div>
   </main>
