--- a/pages/Stats.html
+++ b/pages/Stats.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stats</title>
   <link rel="shortcut icon" href="../resources/img/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="/resources/styles/styles.css">
+  <link rel="stylesheet" href="../resources/styles/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script type="module" src="../js/stats.js" defer></script>
 </head>
 
 <body>
@@ -71,25 +72,25 @@
       </button>
     </div>
 
-    <div class="container d-flex justify-content-center">
+    <div class="container d-flex justify-content-center min-h-100 m-5">
       <div class="row">
         <div class="col-12">
           <table class="table">
             <thead>
               <tr>
-                <th class="table-active" colspan="3">Events Statistics</th>
+                <th class="table-active text-center" colspan="3"><h2>Events Statistics</h2></th>
               </tr>
             </thead>
             <tbody>
               <tr class="text-center">
-                <td>Events with highest % of assistance</td>
-                <td>Events with lowest % of assistance</td>
-                <td>Events with larger capacity</td>
+                <td>Event with highest % of assistance</td>
+                <td>Event with lowest % of assistance</td>
+                <td>Event with larger capacity</td>
               </tr>
               <tr>
-                <td>_</td>
-                <td></td>
-                <td></td>
+                <td id="highestAssistanceField"></td>
+                <td id="lowestAssistanceField"></td>
+                <td id="largerCapacityField"></td>
               </tr>
               <tr>
                 <td class="table-active" colspan="3">Upcoming events statistics by category</td>
@@ -99,16 +100,13 @@
                 <td>Revenues</td>
                 <td>Percentage of assistance</td>
               </tr>
-              <tr>
-                <td>_</td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>_</td>
-                <td></td>
-                <td></td>
-              </tr>
+              <tbody id="upcomingEvents">
+                <tr>
+                  <td>_</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
               <td class="table-active" colspan="3">Past events statistics by category</td>
               </tr>
               <tr class="text-center">
@@ -116,17 +114,12 @@
                 <td>Revenues</td>
                 <td>Percentage of assistance</td>
               </tr>
-              <tr>
-                <td>_</td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>_</td>
-                <td></td>
-                <td></td>
-              </tr>
-
+              <tbody id="pastEvents">
+                <tr>
+                  <td>_</td>
+                  <td></td>
+                  <td></td>
+                </tr>
             </tbody>
           </table>
         </div>
