--- a/pages/UpcomingEvents.html
+++ b/pages/UpcomingEvents.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UpcomingEvents</title>
   <link rel="shortcut icon" href="../resources/img/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="/resources/styles/styles.css">
+  <link rel="stylesheet" href="../resources/styles/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script type="module" src="../js/upcomingEvents.js" defer></script>
@@ -36,7 +36,7 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class="min-h-100">
 
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <h1 class="position-absolute top-50 start-50 translate-middle z-1 fw-bold">UPCOMING EVENTS</h1>
@@ -113,40 +113,6 @@
     <div id="showMessageError"></div>
     <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center gap-2 m-2" id="cardContainer">
      
-      <div class="card h-300px">
-        <img src="../resources/img/costume_party.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Halloween Night</h5>
-          <p class="card-text">
-            <span class="fw-semibold">Description:</span> "Come in your scariest costume character to win amazing prizes." <br>
-            <span class="fw-semibold">Price:</span> 12
-          </p>
-          <a href="./Details.html" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-      <div class="card h-300px">
-        <img src="../resources/img/music_concert.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Metallica in concert</h5>
-          <p class="card-text">
-            <span class="fw-semibold">Description:</span> "The only concert of the most emblematic band in the world" <br>
-            <span class="fw-semibold">Price:</span> 150 <br> <br>
-          </p>
-          <a href="./Details.html" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-      
-      <div class="card h-300px">
-        <img src="../resources/img/cinema.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Avengers</h5>
-          <p class="card-text">
-            <span class="fw-semibold">Description:</span> "Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes." <br>
-            <span class="fw-semibold">Price:</span> 250
-          </p>
-          <a href="./Details.html" class="btn btn-primary">Details</a>
-        </div>
-      </div>
     </div>
 
   </main>
